# SoftRenderer

./: CMakeLists.txt  main.cpp
application/: application.h
